# 0.00.76 (64594) Jun 1, 2012
Fixed: Tetris "L" shapes are off by a factor of 2 for equality tests
Increased bar animation time by 25% (from 0.3 sec to 0.375 sec)
# 0.00.75 (64581) Jun 1, 2012
Improved performance when animating bar chart bars even further
# 0.00.74 (64576) Jun 1, 2012
Improved performance when animating bar chart bars
# 0.00.73 (64573) Jun 1, 2012
Renamed "Fraction Matching Game" to "Fraction Matcher"
Added new sim for "Fraction Matching Game"
# 0.00.72 (64542) May 31, 2012
Build a fraction tab: Block against unnecessary repainting for target cell highlighting
Build a fraction tab: Fixed: Score cell should pulsate then stay highlighted
Build a fraction tab: Made number toolbox light gray
Build a fraction tab: Removed fraction skeleton from toolbox, moved to play area
# 0.00.71 (64503) May 30, 2012
Matching game tab: Improved performance/smoothness for bar animation and fly back animation
Matching game tab: Make sure not all representations are numeric and not all non-numeric
# 0.00.70 (64490) May 30, 2012
Matching game tab: Added random fill for pies and horizontal/vertical slices
Matching game tab: Fixed buggy outline for triangles
Matching game tab: Fixed buggy outline for circles
Matching game tab: Made outline stroke thicker than slice stroke
Matching game tab: Converted PiesSetNode to Pattern
Matching game tab: Converted VerticalBarsNode to Pattern
Matching game tab: Converted HorizontalBarsNode to Pattern
Matching game tab: Fixed: The "diagonal interleaving L shape" is too bit big on the lower levels when there are 6 L's (level 2)
Matching game tab: Animate the bars 2x as fast
# 0.00.69 (64421) May 29, 2012
Equality lab tab: Improved control panel location
# 0.00.68 (64419) May 29, 2012
Equality lab tab: Changed from text radio buttons to icon radio button strip
# 0.00.67 (64410) May 29, 2012
Equality lab tab: Make representation control panel a little bigger to use up space freed up from reducing right hand side representations.